otb (5.0.0-4~@DIST@@PKGVERSION@) @DIST@; urgency=low

  * d/rules : patch OTBConfig.cmake and OTBTargets.cmake

 -- OTB Team <contact@orfeo-toolbox.org>  Mon, 29 Jun 2015 14:55:06 +0200

otb (5.0.0-2~@DIST@1) @DIST@; urgency=low

  * d/rules : Fix FATAL_ERROR in CMake export stuff

 -- OTB Team <contact@orfeo-toolbox.org>  Thu, 18 Jun 2015 18:30:08 +0200

otb (5.0.0-1~@DIST@1) @DIST@; urgency=low

  * Version 5.0.0 released
  * Modularization of the library
  * SuperBuild architecture

 -- OTB Team <contact@orfeo-toolbox.org>  Tue, 16 Jun 2015 14:15:00 +0200

otb (4.2.0-1otb1~@DIST@2) @DIST@; urgency=low

  * Version 4.2.0 released
  * Fix index space conventions
  * Switch to ITK 4.6

 -- OTB Team <contact@orfeo-toolbox.org>  Fri, 29 Aug 2014 10:07:02 +0200

otb (4.0.0-1otb1~trusty2) trusty; urgency=low

  * Switch to ITK 4.5.2

 -- OTB Team <contact@orfeo-toolbox.org>  Fri, 02 Apr 2014 12:03:54 +0100

otb (4.0.0-0ppa~quantal1) quantal; urgency=low

  * New major version 4.0.0 released
  * Switch to ITK 4.5.0
  * New naming convention for packages

 -- OTB Team <contact@orfeo-toolbox.org>  Thu, 13 Feb 2014 20:53:50 +0100

otb (3.20.0-0ppa~precise3) precise; urgency=low

  * Add conflict with previous OTB version

 -- Julien Malik <julien.malik@gmail.com>  Thu, 28 Nov 2013 12:03:58 +0100

otb (3.20.0-0ppa~precise2) precise; urgency=low

  * Fix muparser incompatibilities

 -- Julien Malik <julien.malik@gmail.com>  Tue, 26 Nov 2013 16:21:06 +0100

otb (3.12.0-1) lucid; urgency=low

  * Version 3.12.0 released

 -- OTB Team <contact@orfeo-toolbox.org>  Thu, 31 Jan 2012 09:12:12 +0100

otb (3.10.0-0) lucid; urgency=low

  * Version 3.10.0 released

 -- OTB Team <contact@orfeo-toolbox.org>  Thu, 30 Jun 2011 08:59:14 +0200

otb (3.8.0-7) lucid; urgency=low

  * Version 3.8.0 released

 -- OTB Team <contact@orfeo-toolbox.org>  Wed, 15 Dec 2010 16:50:52 +0100

otb (3.6.0-1) lucid; urgency=low

  * Version 3.6.0 released (first public package)
