@@ -1,6 +1,6 @@
 --- OTBTargets-release.cmake	2015-06-30 11:34:44.723668765 +0200
 +++ OTBTargets-release.cmake	2015-06-30 11:41:05.077293889 +0200
-@@ -1322,24 +1322,18 @@
+@@ -1322,24 +1322,20 @@
  LIST(APPEND _IMPORT_CHECK_TARGETS otbTestDriver )
  LIST(APPEND _IMPORT_CHECK_FILES_FOR_otbTestDriver "${_IMPORT_PREFIX}/bin/otbTestDriver" )
  
@@ -24,7 +24,9 @@
    UNSET(_IMPORT_CHECK_FILES_FOR_${target})
  ENDFOREACH()
  UNSET(_IMPORT_CHECK_TARGETS)
-+LIST(REMOVE_DUPLICATES OTB_TARGETS_MISSING)
++IF(OTB_TARGETS_MISSING)
++  LIST(REMOVE_DUPLICATES OTB_TARGETS_MISSING)
++ENDIF()
  
  # Cleanup temporary variables.
  SET(_IMPORT_PREFIX)
