@@ -1,6 +1,6 @@
 --- OTBTargets.cmake	2015-06-29 11:55:24.709210510 +0200
 +++ OTBTargets.cmake	2015-06-29 11:56:45.573549734 +0200
-@@ -449,25 +449,19 @@
+@@ -449,25 +449,21 @@
  
  # Cleanup temporary variables.
  set(_IMPORT_PREFIX)
@@ -25,7 +25,9 @@
    unset(_IMPORT_CHECK_FILES_FOR_${target})
  endforeach()
  unset(_IMPORT_CHECK_TARGETS)
-+list(REMOVE_DUPLICATES OTB_TARGETS_MISSING)
++if(OTB_TARGETS_MISSING)
++  list(REMOVE_DUPLICATES OTB_TARGETS_MISSING)
++endif()
  
  # This file does not depend on other imported targets which have
  # been exported from the same project but in a separate export set.
